# zk-schnorr-tls

./: .gitignore  Cargo.toml  README.md
prover/: Cargo.toml
prover/src/: main.rs
simulator/: Cargo.toml
simulator/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
zk_schnorr_lib/: Cargo.toml
zk_schnorr_lib/src/: lib.rs
