[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
zk_schnorr_lib = { path = "../zk_schnorr_lib" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rcgen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
