[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
zk_schnorr_lib = { path = "../zk_schnorr_lib" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rcgen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
curve25519-dalek = { version = "4", features = ["alloc", "rand_core", "digest"] }
rand = "0.8"
sha2 = "0.10"
